--- a/index.html
+++ b/index.html
@@ -1,11 +1,150 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Regular para la Paz</title>
+    <link rel="icon" href="./media/logo.png" type="image/png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Work+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        /* Estilos generales */
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Work Sans', sans-serif;
+            color: #333;
+        }
+
+        /* Header (igual al que me pasaste) */
+        header {
+          background-color: #f9f7e4;
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          z-index: 1000;
+          box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        .menu {
+          display: flex;
+          justify-content: space-between;
+          padding: 0px 30px 0px 0;
+          align-items: center;
+        }
+
+        .logo {
+          max-height: 100px;
+        }
+        
+        .select_menu {
+          display: flex;
+          grid-column-gap: 20px;
+        }
+
+        .menu_derecho {
+          display: none;
+        }
+
+        @media (max-width: 1000px) {
+          .select_menu {
+            display: none;
+          }
+          .menu_derecho {
+            display: block;
+          }
+        } 
+
+        .select {
+          text-decoration: none;
+          font-family: "Work Sans", sans-serif;
+          font-weight: 600;
+          color: #167943;
+          padding: 10px 15px;
+          transition: all 0.3s ease;
+          border-radius: 5px;
+        }
+
+        .select:hover {
+          background-color: #167943;
+          color: white;
+        }
+
+        .des_menu {
+          width: 2rem;
+          height: 2rem;
+          cursor: pointer;
+        }
+
+        /* Hero Section */
+        .hero {
+            background-image: url(./media/fondo.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center; 
+            justify-content: center; 
+            text-align: center;
+            color: white; 
+        }
+
+        .hero h1 {
+            font-family: sans-serif;
+            font-size: 3.5rem;
+            margin: 0;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            line-height: 1.2;
+        }
+
+        .hero h4 {
+            font-size: 1.5rem;
+            font-weight: 400;
+            margin: 20px 0 0;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+            max-width: 80%;
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            .hero h1 {
+                font-size: 2.5rem;
+            }
+            .hero h4 {
+                font-size: 1.2rem;
+            }
+        }
+    </style>
 </head>
 <body>
+    <header>
+      <div id="menu" class="menu">
+        <img class="logo" src="./media/logo.png" alt="Logo Regular para la Paz">
+        <div>
+          <div class="menu_derecho">
+            <img class="des_menu" src="./media/navigation-menu.svg" alt="Menú">
+          </div>
+
+          <div class="select_menu">
+            <a class="select" href="index.html">INICIO</a>
+            <a class="select" href="contexto.html">CONTEXTO REGIONAL</a>
+            <a class="select" href="experiencias.html">EXPERIENCIAS</a>
+            <a class="select" href="recomendaciones.html">RECOMENDACIONES</a>
+            <a class="select" href="#contact">CONTÁCTANOS</a>
+          </div>
+        </div>
+      </div>
+    </header>
     
+    <div class="hero">
+        <h1>Regulación del Cannabis <br> para la paz</h1>
+        <h4>Una mirada a la regulación de la marihuana en el norte del Cauca</h4>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
