solo falta video de autor

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <a class="select" href="contexto.html">CONTEXTO REGIONAL</a>
             <a class="select" href="experiencias.html">EXPERIENCIAS</a>
             <a class="select" href="recomendaciones.html">RECOMENDACIONES</a>
-            <a class="select" href="#contact">CONTÁCTANOS</a>
+            <a class="select" href="autor.html">ACERCA DEL AUTOR</a>
           </div>
         </div>
       </div>
