--- a/recomendaciones.html
+++ b/recomendaciones.html
@@ -81,7 +81,7 @@
 
         /* Hero Section */
         .hero {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./media/flores.jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./media/morada.jpeg');
             background-size: cover;
             background-position: center;
             height: 50vh;
@@ -120,7 +120,7 @@
 
             /* Estilos para el contenedor del video */
         .video-container {
-            max-width: 400px; /* Ajusta según necesidad */
+            max-width: 300px; /* Ajusta según necesidad */
             margin: 20px auto;
             border-radius: 10px;
             overflow: hidden;
@@ -216,7 +216,7 @@
             <a class="select" href="contexto.html">CONTEXTO REGIONAL</a>
             <a class="select" href="experiencias.html">EXPERIENCIAS</a>
             <a class="select" href="recomendaciones.html">RECOMENDACIONES</a>
-            <a class="select" href="#contact">CONTÁCTANOS</a>
+            <a class="select" href="autor.html">ACERCA DEL AUTOR</a>
           </div>
         </div>
       </div>
