video del autor

--- a/autor.html
+++ b/autor.html
@@ -268,9 +268,9 @@
             
             <div class="video-container">
                 <div class="video-wrapper">
-                    <h3>Presentación del Proyecto</h3>
+                    <h3>Presentación autor y proyecto</h3>
                     <video controls>
-                        <source src="./media/video-presentacion.mp4" type="video/mp4">
+                        <source src="./media/personal.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </div>
